back without using sudo

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -22,4 +22,4 @@ jobs:
           git pull origin main
           npm install
           npm run migrate up
-          sudo pm2 restart forum-api
+          pm2 restart forum-api
